[fw] use valueOf, or auto boxing
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>